--- a/src/App/components/Alerts/components/AlertsModal/style.css
+++ b/src/App/components/Alerts/components/AlertsModal/style.css
@@ -18,7 +18,8 @@
 }
 
 .AlertsModal .content {
-    background-color: #fff;
+    background-color: var(--background);
+    border: 1px solid #dd6b20;
     width: 80%;
     max-height: 80vh;
     overflow-y: scroll;
