--- a/src/App/components/Alerts/components/AlertsSummary/style.css
+++ b/src/App/components/Alerts/components/AlertsSummary/style.css
@@ -15,7 +15,7 @@
 
 
 .AlertsSummary .alert-button:hover {
-    background-color: #fffaf0;
+    background-color: var(--background-secondary);
 }
 
 .AlertsSummary .alert-icon {
